--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>GIT</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="index.css"  />
   </head>
   <body>
     <div class="container">
@@ -10,7 +11,7 @@
         <h1>GIT</h1>
       </header>
       <div class="content">
-        <h1>1. Inleiding</h1>
+        <h2>1. Inleiding</h2>
         <ol>
           <li>Doelstelling</li>
           <li>Versiebeheersysteem</li>
