--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
           <li>GIT installeren</li>
           <li>GIT gebruiken</li>
           <li>Algemene instellingen</li>
-          <li>Help</li>
+        </ol>
+        <h2>Help</h2>
+        <ol>
+            <li>help</li>
         </ol>
       </div>
     </div>
