--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li>Repository</li>
           <li>GIT installeren</li>
           <li>GIT gebruiken</li>
-          <li>Algemene instelling??</li>
+          <li>instelling??</li>
         </ol>
         <h2>Help</h2>
         <ol>
