--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <li>Repository</li>
           <li>GIT installeren</li>
           <li>GIT gebruiken</li>
+          <li>twa bi</li>
         </ol>
         <h2>Help</h2>
         <ol>
