--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li>Repository</li>
           <li>GIT installeren</li>
           <li>GIT gebruiken</li>
-	  <li>dit werkt</li>
+	  <li><a href="http://www.hoehel.be">Hoehel</a></li>
         </ol>
         <h2>Help</h2>
         <ol>
