--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li>GIT installeren</li>
           <li>GIT gebruiken</li>
 	  <li><a href="http://www.hoehel.be">Hoehel</a></li>
+      <li>test</li>
         </ol>
         <h2>Help</h2>
         <ol>
